# chat-agent-pub

./: .dockerignore  .env  .env-docker  .env-zj  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_prompt.py
app/: main.py
app/agent/: __init__.py  answer_prompts.py  argument_resolver.py  brief_answer_prompts.py  context_builder.py  direction_filter.py  event_catalog.py  event_filter.py  facility_catalog.py  graph.py  history_utils.py  knowledge_support_catalog.py  network_report_renderer.py  planner.py  prompts.py  road_inference.py  router.py  scheduler.py  state.py  tool_traffic_intent.py  tool_traffic_intent_test.py
app/api/: openai_compat.py  streaming.py
app/clients/: __init__.py  live_agent_client.py  llm_client.py
app/core/: config.py  exceptions.py  logger.py
app/knowledge/: __init__.py  service.py
app/mcp/: __init__.py  http_client.py  manager.py  models.py  sse_client.py  stdio_client.py
app/memory/: __init__.py  checkpoint_store.py  manager.py  summarizer.py
app/persistence/: __init__.py  base.py  database.py  memory_repo.py  message_repo.py  models.py  ragflow_repo.py  session_repo.py
app/schemas/: chat.py  knowledge.py  mcp.py  message.py  openai_compat.py  session.py
app/services/: chat_service.py  message_service.py  openai_compat_service.py  session_service.py
app/tools/: __init__.py  registry.py
docs/: development.md  test_question_set.md  tool_api_docs.md
live_agent_proxy/: README.md  __init__.py  config.py  main.py
scripts/: build_facility_catalog.py  build_region_catalog.py  check_network_report_stability.py  test_facility_query_batch.py  test_motorcycle_highway_access_accuracy.py
tests/: conftest.py
tests/e2e/: test_end_to_end_chat_flows.py
tests/integration/: test_agent_graph.py  test_chat_api.py  test_health_api.py  test_knowledge_api.py  test_mcp_api.py  test_messages_api.py  test_openai_compat_api.py  test_openai_compat_regressions.py  test_sessions_api.py
tests/unit/: conftest.py  test_agent_router.py  test_answer_node.py  test_answer_node_network_report_summary.py  test_argument_node.py  test_business_nodes.py  test_chat_service.py  test_chinese_comment_conventions.py  test_config.py  test_context_builder.py  test_direction_filter.py  test_exceptions.py  test_facility_catalog.py  test_knowledge_service.py  test_langchain_openai_reasoning_patch.py  test_live_agent_client.py  test_live_agent_proxy.py  test_llm_client.py  test_logger.py  test_main_monitor_proxy.py  test_mcp_manager.py  (+23 more)
(+43 files in other folders)
