[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "chat-agent-backend"
version = "0.1.0"
description = "最小可用的 Agent 问答系统后端。"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langchain-openai>=0.3.35,<0.4.0",
  "langgraph>=0.2.50,<0.4.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "redis>=5.2.1,<6.0.0",
  "httpx>=0.28.1,<1.0.0",
  "mcp>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0,<1.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
  "ruff>=0.8.4,<1.0.0",
  "pre-commit>=4.0.1,<5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
