[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "chat-agent-backend"
version = "0.1.0"
description = "最小可用的 Agent 问答系统后端。"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi>=0.135.1",
  "uvicorn>=0.42.0",
  "pydantic-settings>=2.12.0",
  "httpx>=0.28.1",
  "langchain>=1.2.3",
  "langchain-openai>=1.1.7",
  "langgraph>=1.0.5",
  "sqlalchemy[asyncio]>=2.0.45",
  "asyncpg>=0.30.0,<1.0.0",
  "redis>=7.3.0",
  "mcp>=1.26.0,<2.0.0",
  "pyahocorasick>=2.3.1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0,<1.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
  "ruff>=0.8.4,<1.0.0",
  "pre-commit>=4.0.1,<5.0.0",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.20.0,<1.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
  "ruff>=0.8.4,<1.0.0",
  "pre-commit>=4.0.1,<5.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
